Bug 1237216 TSFTextStore should forget redundant pending composition events for Korean TIPs r=emk